# arcium-aces

./: .gitignore  DEVNET-DEPLOY-GUIDE.md  arcium-docs.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/: .env.example  .gitignore  components.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
onchain/: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  package.json
onchain/artifacts/: circuits_hash.txt
onchain/encrypted-ixs/: Cargo.toml
onchain/encrypted-ixs/src/: lib.rs  types.rs
onchain/encrypted-ixs/src/circuits/: evaluate_hands_and_payout.rs  mod.rs  reveal_community_cards.rs  shuffle_and_deal.rs
onchain/encrypted-ixs/src/logic/: mod.rs  poker_evaluator.rs  pot_calculator.rs
onchain/programs/aces-unknown/: Cargo.toml
onchain/programs/aces-unknown/src/: error.rs  lib.rs
onchain/programs/aces-unknown/src/instructions/: create_table.rs  deal_community_cards.rs  force_hand_refund.rs  force_player_fold.rs  join_table.rs  leave_table.rs  mod.rs  player_action.rs  resolve_showdown.rs  start_hand.rs  update_rake_params.rs
onchain/programs/aces-unknown/src/state/: card.rs  constants.rs  encrypted_hand.rs  hand_data.rs  mod.rs  platform_config.rs  player_seat.rs  table.rs
onchain/scripts/: call-arcium-init-mxe.js  check-arcium-anchor.js  check-platform-config.js  check-program-methods.js  debug-arcium-init.js  e2e-start-hand.js  init-comp-defs.js  init-computation-defs-fixed.js  init-computation-defs.js  init-mxe-account.js  init-platform-config.js  init-single-comp-def.js  initialize-devnet.js  initialize-devnet.ts  manual-init-comp-defs.js  manual-init-mxe.js  test-arcium-functions.js  verify-mxe-address.js
onchain/tests/: aces-unknown.ts
