[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = "debuginfo"  # Strip debug info

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1