[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = "debuginfo"  # Strip debug info

# Add stack size optimizations
panic = "abort"
stack-protector = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Add debug profile with stack optimizations
[profile.dev]
overflow-checks = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
strip = "debuginfo"