[package]
name = "encrypted-ixs"
version = "0.1.0"
description = "Encrypted instructions for Aces Unknown"
edition = "2021"

[dependencies]
arcis-imports = { version = "0.2.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
panic = "abort"
stack-protector = false

[profile.dev]
overflow-checks = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
strip = "debuginfo"