[package]
name = "aces-unknown"
version = "0.1.0"
description = "Aces Unknown: The Provably Fair Poker Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aces_unknown"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
panic = "abort"
stack-protector = false

[profile.dev]
overflow-checks = true
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false
strip = "debuginfo"